数字付きリストがうまく動かないのでh2へ変更

--- a/ML_Picture_Book.ipynb
+++ b/ML_Picture_Book.ipynb
@@ -11,20 +11,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Linear Regression  \n",
-    "    回帰\n",
-    "    単回帰:独立な説明変数が1つ  \n",
-    "    重回帰:独立な説明変数が2つ以上  \n",
-    "    多項式回帰:独立な説明変数は1つだが、べき乗で表される  \n",
-    "    - 方法\n",
-    "    - 得意領域\n",
-    "    - 注意点  \n",
-    "    Anscom's quartet⇒可視化大事  \n",
-    "    線型回帰は同じとなるが4つの異なるデータパターンがある\n",
-    "        1. 普通\n",
-    "        2. 曲線\n",
-    "        3. 外れ値\n",
-    "        4. 線形でないデータの外れ"
+    "## Linear Regression  \n",
+    "回帰\n",
+    "単回帰:独立な説明変数が1つ  \n",
+    "重回帰:独立な説明変数が2つ以上  \n",
+    "多項式回帰:独立な説明変数は1つだが、べき乗で表される  \n",
+    "- 方法\n",
+    "- 得意領域\n",
+    "- 注意点  \n",
+    "Anscom's quartet⇒可視化大事  \n",
+    "線型回帰は同じとなるが4つの異なるデータパターンがある\n",
+    "    1. 普通\n",
+    "    2. 曲線\n",
+    "    3. 外れ値\n",
+    "    4. 線形でないデータの外れ"
    ]
   },
   {
@@ -49,31 +49,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Regularization  \n",
-    "    回帰、過学習防止のため誤差関数に罰則項を設ける\n",
-    "    - 方法  \n",
-    "        誤差関数=損失関数+罰則項(正則化項)\n",
-    "        - Rigde:罰則項=α×学習パラメータの二乗和\n",
-    "        $$\n",
-    "        α(w_1^2+w_2^2)\n",
-    "        $$\n",
-    "        - Lasso:罰則項=α×学習パラメータの絶対値の和\n",
-    "        $$\n",
-    "        α(|w_1|+|w_2|)\n",
-    "        $$\n",
-    "    - 得意領域\n",
-    "    - 注意点\n"
+    "## Regularization  \n",
+    "回帰、過学習防止のため誤差関数に罰則項を設ける\n",
+    "- 方法  \n",
+    "    誤差関数=損失関数+罰則項(正則化項)\n",
+    "    - Rigde:罰則項=α×学習パラメータの二乗和\n",
+    "    $$\n",
+    "    α(w_1^2+w_2^2)\n",
+    "    $$\n",
+    "    - Lasso:罰則項=α×学習パラメータの絶対値の和\n",
+    "    $$\n",
+    "    α(|w_1|+|w_2|)\n",
+    "    $$\n",
+    "- 得意領域\n",
+    "- 注意点\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Logistic Regression  \n",
-    "    分類、連続値から二値分類する、シグモイド関数\n",
-    "    - 方法\n",
-    "    - 得意領域\n",
-    "    - 注意点"
+    "## Logistic Regression  \n",
+    "分類、連続値から二値分類する、シグモイド関数\n",
+    "- 方法\n",
+    "- 得意領域\n",
+    "- 注意点"
    ]
   },
   {
@@ -97,15 +97,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. SVM(Linear Support Vector Machine)  \n",
-    "    分類/回帰\n",
-    "    - 方法  \n",
-    "        マージンの最大化  \n",
-    "        マージン:決定領域と各クラスの最も近いデータ値の距離の差\n",
-    "        - ハードマージン:マージン内にデータを許容しない\n",
-    "        - ソフトマージン:マージン内にデータを許容する\n",
-    "    - 得意領域\n",
-    "    - 注意点"
+    "## SVM(Linear Support Vector Machine)  \n",
+    "分類/回帰\n",
+    "- 方法  \n",
+    "    マージンの最大化  \n",
+    "    マージン:決定領域と各クラスの最も近いデータ値の距離の差\n",
+    "    - ハードマージン:マージン内にデータを許容しない\n",
+    "    - ソフトマージン:マージン内にデータを許容する\n",
+    "- 得意領域\n",
+    "- 注意点"
    ]
   },
   {
@@ -134,13 +134,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Support Vector Machine(kernel method)  \n",
-    "    分類、kernel法版SVM  \n",
-    "    - 方法  \n",
-    "        決定領域を決められないデータを高次元化して分類する。  \n",
-    "        カーネル関数には、線形カーネル、シグモイドカーネル、多項カーネル、RBFカーネルなどがある。\n",
-    "    - 得意領域\n",
-    "    - 注意点"
+    "## Support Vector Machine(kernel method)  \n",
+    "分類、kernel法版SVM  \n",
+    "- 方法  \n",
+    "    決定領域を決められないデータを高次元化して分類する。  \n",
+    "    カーネル関数には、線形カーネル、シグモイドカーネル、多項カーネル、RBFカーネルなどがある。\n",
+    "- 得意領域\n",
+    "- 注意点"
    ]
   },
   {
@@ -168,29 +168,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. NaiveBayes  \n",
-    "    - 方法\n",
-    "    - 得意領域\n",
-    "    - 注意点"
+    "## NaiveBayes  \n",
+    "- 方法\n",
+    "- 得意領域\n",
+    "- 注意点"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Random Forest  \n",
-    "    回帰/分類\n",
-    "    - 方法  \n",
-    "        複数の決定木を組み合わせる\n",
-    "        - 決定木学習  \n",
-    "            ジニ係数などの不純度が小さくなるようにデータを分割\n",
-    "    $$\n",
-    "    ジニ係数=1-\\sum_{i=1}^{c}p_i^2 \\quad\n",
-    "    $$\n",
-    "        - ランダムフォレストの特徴  \n",
-    "            ブーストラップ法でデータを水増し、特徴量をランダムに選び、多様性を持った決定木学習       \n",
-    "    - 得意領域\n",
-    "    - 注意点"
+    "## Random Forest  \n",
+    "回帰/分類\n",
+    "- 方法  \n",
+    "    複数の決定木を組み合わせる\n",
+    "    - 決定木学習  \n",
+    "        ジニ係数などの不純度が小さくなるようにデータを分割\n",
+    "$$\n",
+    "ジニ係数=1-\\sum_{i=1}^{c}p_i^2 \\quad\n",
+    "$$\n",
+    "    - ランダムフォレストの特徴  \n",
+    "        ブーストラップ法でデータを水増し、特徴量をランダムに選び、多様性を持った決定木学習       \n",
+    "- 得意領域\n",
+    "- 注意点"
    ]
   },
   {
@@ -218,24 +218,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. Neural Network  \n",
-    "    - 方法  \n",
-    "        - アーリーストッピング  \n",
-    "            train-dataを更に検証用に分け、検証データで過学習になったら学習をやめる\n",
-    "    - 得意領域\n",
-    "    - 注意点"
+    "## Neural Network  \n",
+    "- 方法  \n",
+    "    - アーリーストッピング  \n",
+    "        train-dataを更に検証用に分け、検証データで過学習になったら学習をやめる\n",
+    "- 得意領域\n",
+    "- 注意点"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9. kNN(k-Nearest Neighbor method)  \n",
-    "    回帰/分類\n",
-    "    - 方法  \n",
-    "        入力データに近いk個の学習データから多数決で分類する\n",
-    "    - 得意領域\n",
-    "    - 注意点"
+    "## kNN(k-Nearest Neighbor method)  \n",
+    "回帰/分類\n",
+    "- 方法  \n",
+    "    入力データに近いk個の学習データから多数決で分類する\n",
+    "- 得意領域\n",
+    "- 注意点"
    ]
   },
   {
@@ -270,17 +270,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. PCA(Principal Component Analysis)\n",
+    "## PCA(Principal Component Analysis)  \n",
+    "次元削減、低次元の方向と重要度を見つける。\n",
+    "- 方法  \n",
+    "分散共分散行列をもとに固有値問題を解く。  \n",
+    "主成分ごとの固有値を固有値の総和で割ったものを寄与率とする。  \n",
+    "寄与率:主成分が元データ情報の説明率  \n",
+    "- 得意領域\n",
     "\n",
-    "    次元削減、低次元の方向と重要度を見つける。\n",
-    "    - 方法\n",
-    "    分散共分散行列をもとに固有値問題を解く。\n",
-    "    主成分ごとの固有値を固有値の総和で割ったものを寄与率とする。\n",
-    "    寄与率:主成分が元データ情報の説明率\n",
-    "    - 得意領域\n",
-    "\n",
-    "    - 注意点\n",
-    "    累積寄与率が急激に上がらなければPCAは不適切。"
+    "- 注意点\n",
+    "累積寄与率が急激に上がらなければPCAは不適切。"
    ]
   },
   {
@@ -302,11 +301,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. LSA(Latent Semantic Analysis)  \n",
-    "    次元削減、文章や単語の行列を潜在的な意味空間へ変換する。\n",
-    "    - 方法\n",
-    "    - 得意領域\n",
-    "    - 注意点"
+    "## LSA(Latent Semantic Analysis)  \n",
+    "次元削減、文章や単語の行列を潜在的な意味空間へ変換する。  \n",
+    "- 方法\n",
+    "- 得意領域\n",
+    "- 注意点"
    ]
   },
   {
@@ -327,12 +326,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. NMF(Non-negative Matrix Factorization)   \n",
-    "    次元削減、元データを2つの行列に分解する。(W,H)\n",
-    "    行列要素が非負で、分解後も非負/変数が直行しない(⇔PCA)\n",
-    "    - 方法\n",
-    "    - 得意領域\n",
-    "    - 注意点"
+    "## NMF(Non-negative Matrix Factorization)   \n",
+    "次元削減、元データを2つの行列に分解する。(W,H)  \n",
+    "行列要素が非負で、分解後も非負/変数が直行しない(⇔PCA)\n",
+    "- 方法\n",
+    "- 得意領域\n",
+    "- 注意点"
    ]
   },
   {
@@ -357,24 +356,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. LDA(Latent Dirichlet allocation)  \n",
-    "    次元削減、トピックモデル、PLSIのベイズ化モデル\n",
-    "    - 方法  \n",
-    "        各単語がどのトピックから生成されたかに関する確率分布を求める。\n",
-    "    $$\n",
-    "        p(θ,z|w,α,β)=\\frac{p(θ,z,w|α,β)}{p(w|α,β)}\n",
-    "    $$\n",
-    "        p(w|α,β)は出せないので、以下で近似。\n",
+    "## LDA(Latent Dirichlet allocation)  \n",
+    "次元削減、トピックモデル、PLSIのベイズ化モデル  \n",
+    "- 方法  \n",
+    "    各単語がどのトピックから生成されたかに関する確率分布を求める。\n",
+    "$$\n",
+    "    p(θ,z|w,α,β)=\\frac{p(θ,z,w|α,β)}{p(w|α,β)}\n",
+    "$$\n",
+    "    p(w|α,β)は出せないので、以下で近似。\n",
     "\n",
-    "    $$\n",
-    "        q(θ,z|γ,φ)=q(θ|φ)\\prod_{n=1}{N}q(z_n|φ_n)\n",
-    "    $$\n",
+    "$$\n",
+    "    q(θ,z|γ,φ)=q(θ|φ)\\prod_{n=1}{N}q(z_n|φ_n)\n",
+    "$$\n",
     "\n",
-    "        q(θ|γ)がディリクレ分布(パラメータ:トピック数)  \n",
-    "        q(z|φ)が多項分布(パラメータ:単語数×トピック数)\n",
+    "    q(θ|γ)がディリクレ分布(パラメータ:トピック数)  \n",
+    "    q(z|φ)が多項分布(パラメータ:単語数×トピック数)\n",
     "\n",
-    "    - 得意領域\n",
-    "    - 注意点"
+    "- 得意領域\n",
+    "- 注意点"
    ]
   },
   {
@@ -418,13 +417,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. k-means method  \n",
-    "    クラスタリング\n",
-    "    - 方法  \n",
-    "        クラスタ重心を決め、距離でクラスタ分類する。  \n",
-    "        クラスタ平均が重心と同じになるまで、クラスタ平均で分類を繰り返す。\n",
-    "    - 得意領域\n",
-    "    - 注意点"
+    "## k-means method  \n",
+    "クラスタリング  \n",
+    "- 方法  \n",
+    "    クラスタ重心を決め、距離でクラスタ分類する。  \n",
+    "    クラスタ平均が重心と同じになるまで、クラスタ平均で分類を繰り返す。\n",
+    "- 得意領域\n",
+    "- 注意点"
    ]
   },
   {
@@ -447,11 +446,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. GMM(Gaussian Mixture Model)  \n",
-    "    クラスタリング、複数の正規分布で評価\n",
-    "    - 方法\n",
-    "    - 得意領域\n",
-    "    - 注意点"
+    "## GMM(Gaussian Mixture Model)  \n",
+    "クラスタリング、複数の正規分布で評価\n",
+    "- 方法\n",
+    "- 得意領域\n",
+    "- 注意点"
    ]
   },
   {
@@ -476,12 +475,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. LLE(Local Linear Embedding)  \n",
-    "    次元削除、多面体学習、k-meansの次元削除版\n",
-    "    - 方法\n",
-    "    - 得意領域  \n",
-    "        ねじれ、曲がった高次元データ\n",
-    "    - 注意点"
+    "## LLE(Local Linear Embedding)  \n",
+    "次元削除、多面体学習、k-meansの次元削除版\n",
+    "- 方法\n",
+    "- 得意領域  \n",
+    "    ねじれ、曲がった高次元データ\n",
+    "- 注意点"
    ]
   },
   {
@@ -507,13 +506,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. t-SNE(t-Distributed Stochastic Neighbor Embedding)  \n",
-    "    次元削減、多様体学習、自由度1のt分布\n",
-    "    - 方法\n",
-    "    - 得意領域\n",
-    "    バラけた三次元データ\n",
-    "    - 注意点\n",
-    "    4次元以上は精度でないかも"
+    "## t-SNE(t-Distributed Stochastic Neighbor Embedding)  \n",
+    "次元削減、多様体学習、自由度1のt分布\n",
+    "- 方法\n",
+    "- 得意領域  \n",
+    "バラけた三次元データ\n",
+    "- 注意点  \n",
+    "4次元以上は精度でないかも"
    ]
   },
   {
